[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stars.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/PixelRPG.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/sfx_deathscream_human1.wav" type="AudioStream" id=6]
[ext_resource path="res://Difficulty_checker.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/game_music.mp3" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=3]
size = 11
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 1
outline_color = Color( 0.980392, 0.505882, 0.0352941, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="World" type="Node" groups=["World"]]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Stars" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 24, 89 )
z_index = 1
speed = 70

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, -7 )

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.138889
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -17.0
margin_right = 160.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 4 )
text = "GET READY..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Difficulty_checker" parent="." instance=ExtResource( 7 )]

[node name="main_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -9.0
autoplay = true

[connection signal="asteroids" from="." to="Difficulty_checker" method="_on_World_asteroids"]
[connection signal="player_death" from="Player" to="." method="_on_Player_player_death"]
